# axum-koans

./: .dockerignore  .env.dev  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  dependent-services-up.sh  devtool-init.sh  docker-compose.yaml  init.sh  readme.md  realm.json  sqlx-data.json
.github/workflows/: build.yml
examples/: cors.rs  cow.rs  discover.rs  google.rs  log.rs  trace.rs  verify.rs
infrastructure/: .gitignore  docker-compose.yaml  readme.md  services-up.sh
infrastructure/google/: init.sh  main.tf  outputs.tf
infrastructure/keycloak/: init.sh  load-google-env.sh  main.tf  readme.md
migrations/: 20230528143920_add_profiles_table.sql  20230531053200_init-table.down.sql  20230531053200_init-table.up.sql
src/: config.rs  errors.rs  lib.rs  main.rs
src/database/: mod.rs  profile.rs
src/extensions/: google_auth.rs  keycloak_auth.rs  mod.rs
src/handlers/: auth.rs  login.rs  mod.rs  user.rs
src/middlewares/: log.rs
src/tables/: profile.rs
