[package]
name = "axum-koans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18" }
chrono = { version = "0.4.24", features = ["serde"] }
dotenvy = "0.15.7"
hyper = { version = "0.14", features = ["full"] }
oauth2 = "4.4.0"
reqwest = "0.11.18"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["postgres","runtime-tokio-rustls","chrono"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "filter"] }
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
