[package]
name = "axum-koans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5" }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
hyper = { version = "1.2.0", features = ["full"] }
oauth2 = { version = "5.0.0-alpha.4", features = [
    "reqwest",
    "reqwest-blocking",
] }
reqwest = "0.12.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.7.4", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
] }
http-body-util = "0.1"
thiserror = "1.0.58"
tokio = { version = "1.0", features = ["macros", "sync", "rt-multi-thread"] }
tower = { version = "0.4", features = ["util", "filter"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
openssl = { version = "0.10.54", features = ["vendored"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }

[dev-dependencies]
openidconnect = "3.2.0"
jwtk = "0.2.4"
base64 = "0.21.2"
